--- a/frontend/src/app/components/seguimientos/seguimientos.component.html
+++ b/frontend/src/app/components/seguimientos/seguimientos.component.html
@@ -1,50 +1,52 @@
-
 <div class="card-container m-4">
   <div class="card flex justify-content-center">
-      <p-card header="Seguimientos">
-          <div style="text-align: center">
-            <p-table 
-              [value]="seguimientos"
-              [paginator]="true"
-              [rows]="10"
-              [columns]="seguimientos" 
-              class="custom-table">
-              <ng-template pTemplate="header" let-columns >
-                <tr class="custom-header">
-                  <th>Id</th>
-                  <th>Tarea</th>
-                  <th>Duración</th>
-                  <th>Tarea de Dependencia</th>
-                  <th>Inicio</th>
-                  <th>Fin</th>
-                  <th>Estado</th>
-                  <th>Responsable</th>
-                  <th>Fecha de Fin</th>
-                  <th>Proyecto</th>
-                  <th>Acciones</th>
-                </tr>
-              </ng-template>
-              <ng-template
-                pTemplate="body"
-                let-rowData
-                let-columns="columns">
-                <tr>
-                  <td>{{rowData.id}}</td>
-                  <td>{{rowData.descripciontarea}}</td>
-                  <td>{{rowData.duracion}}</td>
-                  <td>{{rowData.tareadependencia}}</td>
-                  <td>{{rowData.inicio}}</td>
-                  <td>{{rowData.fin}}</td>
-                  <td>{{rowData.estadoid}}</td>
-                  <td>{{rowData.responsable}}</td>
-                  <td>{{rowData.fechafin}}</td>
-                  <td>{{rowData.proyectoid}}</td>
-                  <td><button class="btn btn-primary">Revisar</button></td>
-                </tr>
-              </ng-template>
-            </p-table>
-          </div>
-      </p-card>
+    <button pButton type="button" label="Agregar Nuevo Seguimiento" icon="pi pi-plus"
+      class="p-button-primary m-2 p-button-outlined boton-redondo"></button>
+    <p-card header="Seguimientos">
+      <div style="text-align: center">
+        <p-table [value]="seguimientos" [paginator]="true" [rows]="10" [columns]="seguimientos" class="custom-table">
+          <ng-template pTemplate="header" let-columns>
+            <tr class="custom-header">
+              <th>Id</th>
+              <th>Tarea</th>
+              <th>Duración</th>
+              <th>Tarea Anterior</th>
+              <th>Dias dependencia</th>
+              <th>Tipo de Dependencia</th>
+              <th>Inicio</th>
+              <th>Fin</th>
+              <th>Estado</th>
+              <th>Responsable</th>
+              <th>Fecha de Fin</th>
+              <th>Pasos</th>
+              <th>Proyecto</th>
+              <th>Acciones</th>
+            </tr>
+          </ng-template>
+          <ng-template pTemplate="body" let-rowData let-columns="columns">
+            <tr>
+              <td>{{rowData.id}}</td>
+              <td>{{rowData.descripciontarea}}</td>
+              <td>{{rowData.duracion}}</td>
+              <td>{{ obtenerTareaAnterior(rowData.tarea_anterior) }}</td>
+              <td>{{rowData.diasdependencia}}</td>
+              <td>{{ obtenerTipoDependencia(rowData.tipodependenciaid)}}</td>
+              <td>{{rowData.inicio}}</td>
+              <td>{{rowData.fin}}</td>
+              <td>{{ obtenerEstado(rowData.estadoid) }}</td>
+              <td>{{rowData.responsable}}</td>
+              <td>{{rowData.fechafin}}</td>
+              <td>{{ obtenerPasos(rowData.pasosid) }}</td>
+              <td>{{ obtenerProyectos(rowData.proyectoid) }}</td>
+              <td>
+                <button pButton type="button" label="Editar" icon="pi pi-pencil"
+                  class="p-button-warning m-2 p-button-outlined boton-redondo"></button>
+              </td>
+            </tr>
+          </ng-template>
+        </p-table>
+      </div>
+    </p-card>
   </div>
 </div>
 <p>pepito paez es Dios reencarnado </p>
