--- a/frontend/src/app/components/proyectos/proyectos.component.html
+++ b/frontend/src/app/components/proyectos/proyectos.component.html
@@ -53,19 +53,22 @@
     <form (ngSubmit)="crearProyecto()" class="form-container">
       <div class="form-field">
         <label for="proyecto">Nombre del Proyecto</label>
-        <input type="text" id="proyecto" [(ngModel)]="editMode ? editingProyecto.proyecto : crearProyectosI.proyecto"
+        <input type="text" id="proyecto" [ngModel]="editMode ? editingProyecto.proyecto : crearProyectosI.proyecto"
+        (ngModelChange)="editMode ? editingProyecto.proyecto = $event : crearProyectosI.proyecto = $event" 
           name="proyecto" required class="input-field">
       </div>
 
       <div class="form-field">
         <label for="codigo">Código del Proyecto</label>
-        <input type="text" id="codigo" [(ngModel)]="editMode ? editingProyecto.codigo : crearProyectosI.codigo"
+        <input type="text" id="codigo" [ngModel]="editMode ? editingProyecto.codigo : crearProyectosI.codigo"
+        (ngModelChange)="editMode ? editingProyecto.codigo = $event : crearProyectosI.codigo = $event" 
           name="codigo" required class="input-field">
       </div>
 
       <div class="form-field">
         <label for="plazo">Plazo</label>
-        <input type="number" id="plazo" [(ngModel)]="editMode ? editingProyecto.plazo : crearProyectosI.plazo"
+        <input type="number" id="plazo" [ngModel]="editMode ? editingProyecto.plazo : crearProyectosI.plazo"
+        (ngModelChange)="editMode ? editingProyecto.plazo = $event : crearProyectosI.plazo = $event" 
           name="plazo" required class="input-field">
       </div>
 
@@ -80,16 +83,17 @@
 
       <div class="form-field">
         <label for="fechaf">Fecha de Fin</label>
-        <input type="date" id="fechaf" 
-        [ngModel]="formatDate(editMode ? editingProyecto.fechaf : crearProyectosI.fechaf)"
-        (ngModelChange)="editMode ? editingProyecto.fechaf = $event : crearProyectosI.fechaf = $event"
-          name="fechaf" required class="input-field">
+        <input type="date" id="fechaf"
+          [ngModel]="formatDate(editMode ? editingProyecto.fechaf : crearProyectosI.fechaf)"
+          (ngModelChange)="editMode ? editingProyecto.fechaf = $event : crearProyectosI.fechaf = $event" name="fechaf"
+          required class="input-field">
       </div>
 
       <div class="form-field">
         <label for="convocatoria">Convocatoria</label>
         <select id="convocatoria"
-          [(ngModel)]="editMode ? editingProyecto.convocatoriaid : crearProyectosI.convocatoriaid" name="convocatoria"
+          [ngModel]="editMode ? editingProyecto.convocatoriaid : crearProyectosI.convocatoriaid"
+          (ngModelChange)="editMode ? editingProyecto.convocatoriaid = $event : crearProyectosI.convocatoriaid = $event" name="convocatoria"
           required class="input-field">
           <option *ngFor="let convocatoria of convocatoriaNombre" [value]="convocatoria.id">{{ convocatoria.convocatoria
             }}</option>
@@ -99,7 +103,8 @@
       <div class="form-field">
         <label for="rolUniversidad">Rol Universidad</label>
         <select id="rolUniversidad"
-          [(ngModel)]="editMode ? editingProyecto.roluniversidadid : crearProyectosI.roluniversidadid"
+          [ngModel]="editMode ? editingProyecto.roluniversidadid : crearProyectosI.roluniversidadid"
+          (ngModelChange)="editMode ? editingProyecto.roluniversidadid = $event : crearProyectosI.roluniversidadid = $event"           
           name="rolUniversidad" required class="input-field">
           <option *ngFor="let rol of rolU" [value]="rol.id">{{ rol.rolU }}</option>
         </select>
@@ -107,7 +112,8 @@
 
       <div class="form-field">
         <label for="operador">Operador</label>
-        <select id="operador" [(ngModel)]="editMode ? editingProyecto.operadorid : crearProyectosI.operadorid"
+        <select id="operador" [ngModel]="editMode ? editingProyecto.operadorid : crearProyectosI.operadorid"
+        (ngModelChange)="editMode ? editingProyecto.operadorid = $event : crearProyectosI.operadorid = $event" 
           name="operador" required class="input-field">
           <option *ngFor="let operador of operadorNombre" [value]="operador.id">{{ operador.operador }}</option>
         </select>
@@ -116,7 +122,8 @@
       <div class="form-field">
         <label for="entidadFinanciadora">Entidad Financiadora</label>
         <select id="entidadFinanciadora"
-          [(ngModel)]="editMode ? editingProyecto.entidadfinanciadora : crearProyectosI.entidadfinanciadora"
+          [ngModel]="editMode ? editingProyecto.entidadfinanciadora : crearProyectosI.entidadfinanciadora"
+          (ngModelChange)="editMode ? editingProyecto.entidadfinanciadora = $event : crearProyectosI.entidadfinanciadora = $event" 
           name="entidadFinanciadora" required class="input-field">
           <option *ngFor="let entidad of entidadFNombre" [value]="entidad.id">{{ entidad.entidadfinanciadora }}</option>
         </select>
@@ -125,7 +132,8 @@
       <div class="form-field">
         <label for="grupoInvestigacion">Grupo de Investigación</label>
         <select id="grupoInvestigacion"
-          [(ngModel)]="editMode ? editingProyecto.grupoinvestigacionid : crearProyectosI.grupoinvestigacionid"
+          [ngModel]="editMode ? editingProyecto.grupoinvestigacionid : crearProyectosI.grupoinvestigacionid"
+          (ngModelChange)="editMode ? editingProyecto.grupoinvestigacionid = $event : crearProyectosI.grupoinvestigacionid = $event" 
           name="grupoInvestigacion" required class="input-field">
           <option *ngFor="let grupo of grupoINombre" [value]="grupo.id">{{ grupo.grupoinvestigacion }}</option>
         </select>
