--- a/frontend/src/app/components/seguimientos/seguimientos.component.css
+++ b/frontend/src/app/components/seguimientos/seguimientos.component.css
@@ -28,16 +28,6 @@ background-color: #f2f2f2; /* Fondo de fila impar */
 background-color: #e0e0e0; /* Fondo al pasar el ratón */
 }
 
-/* Estilo para el botón de "Editar" */
-.p-button-success {
-background-color: #28a745; /* Color de fondo del botón */
-color: white; /* Color del texto del botón */
-border: none; /* Sin borde */
-padding: 5px 10px; /* Espaciado interno */
-cursor: pointer; /* Cambio de cursor al pasar el ratón */
-border-radius: 5px; /* Borde redondeado */
-}
-
 /* Estilo para el enlace del archivo */
 .custom-table a {
 color: #007bff; /* Color del enlace */
@@ -60,26 +50,22 @@ padding: 8px; /* Espaciado interno */
 text-align: left;
 }
 
-.file-cell {
-white-space: nowrap; /* Evitar que el nombre del archivo se rompa en varias líneas */
-}
-
-.file-link {
-text-decoration: none; /* Sin subrayado para los enlaces de archivos */
-color: #007bff; /* Color del enlace */
-}
-
 /* Contenedor del formulario */
 .form-container {
   width: 100%;
-  margin: 0 auto;
   padding: 20px;
   border: 1px solid #ccc;
   border-radius: 5px;
   background-color: #f9f9f9;
 }
 
-/* Campos del formulario */
+.input-field {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+}
+
 .form-field {
   margin-bottom: 15px;
 }
@@ -91,43 +77,7 @@ color: #007bff; /* Color del enlace */
   margin-bottom: 5px;
 }
 
-/* Estilos para campos de entrada de texto y número */
-.input-field {
-  width: 100%;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 3px;
-}
-
-/* Estilos para selects */
-.input-field select {
-  width: 100%;
-  padding: 10px;
-  border: 1px solid #cccccc;
-  border-radius: 3px;
-}
-
-/* Estilos para botones */
-.button {
-  padding: 10px 20px;
-  border: none;
-  border-radius: 3px;
-  cursor: pointer;
-}
-
-/* Estilos para el formulario en dispositivos móviles */
-@media (max-width: 768px) {
-  .form-container {
-    max-width: 100%;
-    padding: 10px;
-  }
-  .form-field {
-    margin-bottom: 10px;
-  }
-  .input-field, .input-field select {
-    padding: 5px;
-  }
-  .button {
-    padding: 8px 15px;
-  }
+.button-container {
+  text-align: right;
+  margin-top: 20px;
 }
