--- a/frontend/src/app/components/proyectosform/proyectosform.component.html
+++ b/frontend/src/app/components/proyectosform/proyectosform.component.html
@@ -70,6 +70,9 @@
         </p-card>
     </div>
 </div>
+
+<!-- {Formulario de edicion de Proyecto}-->
+
 <p-dialog header="Formulario" [(visible)]="visible" [modal]="true" [responsive]="true"
     [style]="{width: 'width', minWidth: 'minWidth'}">
     <div>
@@ -159,6 +162,9 @@
         </form>
     </div>
 </p-dialog>
+
+<!-- {Vsta de Archivos por Proyecto} -->
+
 <p-dialog header="ArchivosProyecto" [(visible)]="archivosProyecto" [modal]="true" [responsive]="true"
     [style]="{width: 'width', minWidth: 'minWidth'}">
 
